# keras-tuner-extensionpack

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yaml  python-publish.yaml
keras_tuner_extensionpack/: simulated_annealing_search.py  sin_cosine_algorithm.py  test_new_optimizers.py
keras_tuner_extensionpack/benchmark/: __init__.py
keras_tuner_extensionpack/examples/: cma_es_example.py  differential_evolution_example.py  harmony_search_example.py  sincos_example.py  tabu_search_example.py  variable_depth_search_example.py
