[tool.poetry]
name = "keras-tuner-extensionpack"
version = "0.1.0"
description = "An extension pack for keras-tuner for providing additional optimizers."
license = "Apache License 2.0"
authors = ["Anselm Hahn <Anselm.Hahn@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
keras-tuner = "^1.4.6"
numpy = [
    { version = "<1.26.4", python = "<3.9", markers = "python_version < '3.9'" },
    { version = "^1.26.4", python = "^3.9", markers = "python_version >= '3.9'" },
]
scipy = [
    { version = "<1.12.0", python = "<3.9", markers = "python_version < '3.9'", optional = true },
    { version = "^1.12.0", python = "^3.9", markers = "python_version >= '3.9'", optional = true },
]
tensorflow = [
    { version = "<2.15.0.post1", python = "<3.9", markers = "python_version < '3.9'", optional = true },
    { version = "<3.0.0", python = "^3.9", markers = "python_version >= '3.9'", optional = true },
]
update = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.4"
pytest-cov = "^5.0.0"

[tool.poetry.group.benchmark.dependencies]
matplotlib = [
    { version = "<3.8.2", python = "<3.9" },
    { version = "^3.8.2", python = "^3.9" },
]
scikit-learn = [
    { version = "<1.4.1.post1", python = "<3.9" },
    { version = "^1.4.1.post1", python = "^3.9" },
]

[tool.poetry.extras]
scipy = ["scipy"]
tensorflow = ["tensorflow"]
all = ["scipy", "tensorflow"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=keras_tuner_extensionpack --cov-report=term-missing --cov-report=xml --cov-report=html" # --cov-fail-under=100
